changes before creating test branch

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,5 +16,7 @@ task.link=task.link
 task.parent-task=task.parent-task
 task.skills-description=task.skills-description
 task.status=task.status
+validation.field.empty=Field is empty
+validation.field.length.max=Field must not contain more than ** symbols
 WEEKS=weeks
 YEARS=years
