--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -16,5 +16,7 @@ task.link=Link
 task.parent-task=Parent task
 task.skills-description=Skills Description
 task.status=Status
+validation.field.empty=Field is empty
+validation.field.length.max=Field must not contain more than {value} symbols
 WEEKS=weeks
 YEARS=years
